# sherloque

./: .gitignore  README.md  pyproject.toml
docs/guides/: ir_eval_primer.md
nbs/: searchindex.db  stem_and_tokenize.ipynb  test.ipynb
old/app/: main.py
old/app/routes/api_routes/v1/: __init__.py  query_routes.py
scratchpad/nbs/: bm25_end_to_end.ipynb  crawl.ipynb  db_playground.ipynb  playground.ipynb  test.ipynb
scratchpad/scripts/: backfill_embeddings.py  eval_bm25.py  eval_retrieval.py  init_db.py
src/: config.py  utils.py
src/app/: config.py  main.py
src/app/models/: __init__.py  query_models.py
src/app/routes/api_routes/: __init__.py
src/app/routes/api_routes/v1/: query_routes.py
src/search_engine/: crawler.py
src/sherloque/: __init__.py  config.py  crawler.py  log_config.py  models.py  query_engine.py  utils.py
src/sherloque/crawler/: __init__.py  base.py  crawler.py  generic_crawler.py  linkedin_crawler.py
src/sherloque/model_providers/: __init__.py  _retry.py  base.py  fireworks.py  openai_compatible.py
src/sherloque/rank/: __init__.py  cross_encoder_rerank.py
src/sherloque/retrieve/: __init__.py  base.py  bm25.py  fusion.py  vector.py
src/sherloque/search_engine/: __init__.py  crawler.py  query_engine.py  ranker.py
tests/: TODO.md  database.py  test_bm25_retriever.py  test_cross_encoder_reranker.py  test_fireworks_provider.py  test_model_provider_base.py  test_model_provider_contract.py  test_openai_compatible.py  test_query_engine.py  test_reciprocal_rank_fusion.py  test_retry.py  test_vector_retriever.py
